[package]
name = "gpk-unpacker"
version = "0.1.0"
authors = ["CirnoV <cirnov59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
console = "0.14.1"
indicatif = "0.16.0"
nom = "6.1.2"
structopt = "0.3.21"
